--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,17 @@
   </head>
 
   <body>
+    <%= render 'shared/navbar' %>
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <div class="wrapper">
+      <%= yield %>
+    </div>
+    <div class="footer">
+      <footer>
+        <%= render 'shared/footer' %>
+      </footer>
+    </div>
   </body>
 </html>
