--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <%= link_to "#", class: "navbar-brand" do %>
      <!-- <image_tag -->
      <!-- "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %> -->
-     <%= image_tag "https://cdn.iconscout.com/icon/free/png-256/ghostbusters-282377.png" %>
+    <p>  <i class="fas fa-ghost white-ghost"></i> <strong> scarebnb </strong></p>
 
     <% end %>
 
