show page html and css

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,6 +5,11 @@
   // margin: px;
 }
 
+.card {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
 .card-trip {
   overflow: hidden;
   background: white;
