--- a/app/views/ghosts/index.html.erb
+++ b/app/views/ghosts/index.html.erb
@@ -14,5 +14,5 @@
     </div>
   <% end %>
   </div>
-  <div class="text-center mg-16px"> <%= link_to 'Add a new ghost', new_ghost_path, class: 'btn btn-primary'%> </div>
+  <div class="text-center mg-16px"> <%= link_to 'Add a new ghost', new_ghost_path, class: 'btn btn-nice'%> </div>
 </div>
