adding home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,91 @@
-<h1>Welcome to Scare BnB</h1>
+
+
+<div class="banner home" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1581434271931-c2dcc19239ea?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1564&q=80);">
+  <div class="container">
+
+   <div class="h1-title"><h1 class="home-title">Welcome to <strong>scarebnb</strong>!</h1><p>Haunt your friends and family for a reasonable price👻</p>
+     <!-- <div class="h2-title" <p class="home-page">Haunt your friends and family for a reasonable price👻</p> -->
+      <p><%= link_to 'Book a Ghost', ghosts_path, class: 'btn btn-flat' %>
+      <%= link_to 'Add a Ghost', new_ghost_path, class: 'btn btn-flat' %> </p>
+    </div>
+  </div>
+</div>
+
+
+<div style="display: flex; justify-content: center;">
+  <div class="container-cards">
+   <div class="card" style="width: 18rem;">
+    <img src="https://images.unsplash.com/photo-1601496319406-21021f4f60bd?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Michael Jackson</p>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="https://images.unsplash.com/photo-1604186838347-9faaf0b83be8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="...">
+    <div class="card-body">
+      <p class="card-text">The Headless Horseman</p>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="https://images.unsplash.com/photo-1587356315079-3178211b3166?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Elvis Presley</p>
+    </div>
+  </div>
+  </div>
+</div>
+
+
+
+<!-- ____________ -->
+
+
+
+
+
+
+
+
+
+
+
+<!--     <div class="features1">
+      <section id="features">
+        <div class="container-card">
+          <div class="row">
+            <div class="EU col-sm-3">
+              <div class="card" style="width: 18rem;">
+                <img src="https://images.unsplash.com/photo-1604186838347-9faaf0b83be8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">The Headles Horseman</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="EU col-sm-3">
+              <div class="card" style="width: 18rem;">
+                <img src="https://images.unsplash.com/photo-1604186838347-9faaf0b83be8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Michael Jackson</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="EU col-sm-3">
+              <div class="card" style="width: 18rem;">
+                <img src="https://images.unsplash.com/photo-1600887292404-ac6e38cf3302?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Hades</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div> -->
 
 
 
