--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
 
   <body>
     <%= render 'shared/navbar' %>
-
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+<!-- YOU NEED THESE- ONLY FOR DEMO YOU DON'T -->
+    <!-- <p class="notice"><%= notice %></p> -->
+    <!-- <p class="alert"><%= alert %></p> -->
     <div class="wrapper">
       <%= yield %>
     </div>
