--- a/app/assets/stylesheets/components/_features.scss
+++ b/app/assets/stylesheets/components/_features.scss
@@ -25,7 +25,7 @@
   // justify-content: between;
 }
 
-.card{
+.card-home{
   // grid-gap: space-between;
   margin: 16px;
 }
@@ -33,3 +33,18 @@
 .featured-ghosts{
   justify-content: center;
 }
+
+img{
+  object-fit:contain;
+  width: 100%;
+}
+
+.card-text {
+  text-align: center;
+  font-weight: bold;
+}
+//     vertical-align: middle;
+    // border-style: none;
+    // height: 299px;
+    // width: 300;
+    // justify-content: space-around
