--- a/app/views/ghosts/show.html.erb
+++ b/app/views/ghosts/show.html.erb
@@ -4,7 +4,7 @@
     <div class="col-12 col-lg-6">
   <div class="card">
     <div class="card-trip">
-      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+      <%= cl_image_tag(@ghost.photos.first.key) %>
         <div class="card-trip-infos">
           <div>
             <h2><%= @ghost.name %></h2>
