--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
-
-<div class="banner home" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1581434271931-c2dcc19239ea?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1564&q=80);">
+<body class="home-page">
+<div class="banner home" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1534193708707-6be94c4f67d3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=967&q=80);">
   <div class="container">
 
    <div class="h1-title"><h1 class="home-title">Welcome to <strong>scarebnb</strong>!</h1><p>Haunt your friends and family for a reasonable price👻</p>
@@ -10,7 +10,7 @@
     </div>
   </div>
 </div>
-
+<h2>Featured Ghosts</h2>
 
 <div style="display: flex; justify-content: center;">
   <div class="container-cards">
@@ -35,7 +35,7 @@
 
   </div>
 </div>
-
+</body>
 
 
 <!-- ____________ -->
