--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,9 +16,9 @@
         <li class="nav-item active">
           <%= link_to "Home", "#", class: "nav-link" %>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <%= link_to "Messages", "#", class: "nav-link" %>
-        </li>
+        </li> -->
         <li class="nav-item dropdown">
           <%= image_tag "https://cdn.iconscout.com/icon/free/png-256/ghostbusters-282377.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
