--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "#", class: "navbar-brand" do %>
-     <!-- <image_tag -->
-     <!-- "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %> -->
-    <p>  <i class="fas fa-ghost white-ghost"></i> <strong> scarebnb </strong></p>
+  <%= link_to "/", class: "navbar-brand" do %>
+    <i class="fas fa-ghost white-ghost ghost-logo"></i>
     <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
