--- a/app/views/ghosts/index.html.erb
+++ b/app/views/ghosts/index.html.erb
@@ -3,7 +3,11 @@
   <div class="cards">
   <% @ghosts.each do |ghost| %>
     <div class="card-trip">
-      <%= cl_image_tag(ghost.photos.first.key) %>
+      <% if ghost.photos.attached? %>
+        <%= cl_image_tag(ghost.photos.first.key) %>
+      <% else %>
+        <%= cl_image_tag("https://res.cloudinary.com/dbe4hul9k/image/upload/w_1000,ar_16:9,c_fill,g_auto,e_sharpen/v1622714025/ghostbusters-logo_cqzclk.jpg") %>
+      <% end %>
       <div class="card-trip-infos">
         <div>
        <h2> <%= link_to ghost.name, ghost_path(ghost) %> </h2>
