added the ability to upload images in new ghost form

--- a/app/views/ghosts/new.html.erb
+++ b/app/views/ghosts/new.html.erb
@@ -10,6 +10,7 @@
         <%= g.input :category, :collection => %w[Scary Friendly Jovial Grumpy Mischevious]%>
         <%= g.input :description %>
         <%= g.input :price %>
+        <%= g.input :photos, as: :file, input_html: { multiple: true } %>
         <%= g.submit class: 'btn btn-success' %>
       <% end %>
         </div>
