--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -13,26 +13,28 @@
 }
 
 .home-title {
-  margin: 0;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 60px;
+  font-size: 80px;
   font-weight: bold;
-  margin: 0 auto;
   font-family: 'Odibee Sans', cursive;
+  display: grid;
+  place-items: center;
+  margin-top: 24px;
 }
 
 .h1-title{
   position:absolute;
-  align-items: center;
-  top: 150px;
-  left:250px;
+  text-align: center;
   justify-content: center;
+  display: grid;
+  place-items: center;
+  margin-top: 24px;
 }
 
 .h1-title p{
   color:red;
-}
+// }
 
 .home-page {
   font-size: 20px;
