--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,8 @@
 // Specific CSS for your home-page
+
 .home_video {
  width: 100vw;
- height: 100vh;
+ height: 100%;
  position: absolute;
  object-fit: cover;
  top: 0;
