--- a/app/views/hauntings/show.html.erb
+++ b/app/views/hauntings/show.html.erb
@@ -31,6 +31,7 @@
  <div class="text-center mg-16px">
   <%= link_to 'Go back', ghost_path(@haunting.ghost), class: 'btn btn-primary' %>
  <%= link_to 'Look at more ghosts', ghosts_path, class: 'btn btn-primary' %>
+ <%= link_to "View all hauntings", "/hauntings", class: "btn btn-primary" %>
 </div>
 <!-- <p>Start Date: <%= @haunting.start_date %></p>
 <p>End Date: <%= @haunting.end_date %></p>
