--- a/app/views/hauntings/show.html.erb
+++ b/app/views/hauntings/show.html.erb
@@ -12,7 +12,7 @@
       <div class="card">
         <div class="card-trip">
           <% if @haunting.ghost.photos.attached? %>
-            <%= cl_image_tag(@haunting.ghost.photos) %>
+            <%= cl_image_tag(@haunting.ghost.photos.first.key) %>
           <% else %>
             <%= cl_image_tag("https://res.cloudinary.com/dbe4hul9k/image/upload/w_1000,ar_16:9,c_fill,g_auto,e_sharpen/v1622714025/ghostbusters-logo_cqzclk.jpg") %>
           <% end %>
