updated the hauntings index page to show correct image

--- a/app/views/hauntings/index.html.erb
+++ b/app/views/hauntings/index.html.erb
@@ -4,7 +4,11 @@
     <div class="col-12 col-lg-6">
       <div class="card">
         <div class="card-trip">
+          <% if haunting.ghost.photos.attached? %>
+            <%= cl_image_tag(haunting.ghost.photos.first.key) %>
+          <% else %>
             <%= cl_image_tag("https://res.cloudinary.com/dbe4hul9k/image/upload/w_1000,ar_16:9,c_fill,g_auto,e_sharpen/v1622714025/ghostbusters-logo_cqzclk.jpg") %>
+          <% end %>
           <div class="card-trip-infos">
             <div>
               <h2>You're new haunting details: </h2>
