--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,7 +8,7 @@
   color: rgba(0,0,0,0.3);
   justify-content: center;
   background-color: #f7f7f7;
-  color: #ff5a62;
+  color: red;
   border-top: solid 1px #ff5a62;
 
 }
@@ -18,7 +18,7 @@
   color: #ff5a62;
 }
 .footer-links a {
-  color: #ff5a62;
+  color: red;
   // opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
@@ -30,7 +30,7 @@
   color: black;
 }
 .white-ghost {
-  color: #ff5a62;
+  color: red;
   font-size: 25px;
   vertical-align: middle;
 }
