--- a/app/views/ghosts/index.html.erb
+++ b/app/views/ghosts/index.html.erb
@@ -1,22 +1,26 @@
-<div class="container">
-  <div class="text-center"><h1> Have a look at the available ghosts: </h1> </div>
-  <div class="cards">
-  <% @ghosts.each do |ghost| %>
-    <div class="card-trip">
-      <% if ghost.photos.attached? %>
-        <%= cl_image_tag(ghost.photos.first.key) %>
-      <% else %>
-        <%= cl_image_tag("https://res.cloudinary.com/dbe4hul9k/image/upload/w_1000,ar_16:9,c_fill,g_auto,e_sharpen/v1622714025/ghostbusters-logo_cqzclk.jpg") %>
-      <% end %>
-      <div class="card-trip-infos">
-        <div>
-       <h2> <%= link_to ghost.name, ghost_path(ghost) %> </h2>
-       <p> <%= ghost.description  %> </p>
-       </div>
-      <h2 class="card-trip-pricing">€<%= ghost.price%></h2>
+
+  <div class="container">
+    <div class="text-center"><h1> Have a look at the available ghosts: </h1> </div>
+    <div class="cards">
+    <% @ghosts.each do |ghost| %>
+    <%= link_to ghost_path(ghost) do %>
+      <div class="card-trip" >
+        <% if ghost.photos.attached? %>
+          <%= cl_image_tag(ghost.photos.first.key) %>
+        <% else %>
+          <%= cl_image_tag("https://res.cloudinary.com/dbe4hul9k/image/upload/w_1000,ar_16:9,c_fill,g_auto,e_sharpen/v1622714025/ghostbusters-logo_cqzclk.jpg") %>
+        <% end %>
+        <div class="card-trip-infos">
+          <div>
+         <h2><%= ghost.name %></h2>
+         <p> <%= ghost.description  %> </p>
+         </div>
+        <h2 class="card-trip-pricing">€<%= ghost.price%></h2>
+        </div>
       </div>
+     <% end %>
+    <% end %>
     </div>
-  <% end %>
+    <div class="text-center mg-16px"> <%= link_to 'Add a new ghost', new_ghost_path, class: 'btn btn-nice'%> </div>
   </div>
-  <div class="text-center mg-16px"> <%= link_to 'Add a new ghost', new_ghost_path, class: 'btn btn-nice'%> </div>
-</div>
+
