--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -28,12 +28,12 @@
   text-align: center;
   justify-content: center;
   display: grid;
-  place-items: center;
+  // place-items: center;
   margin-top: 24px;
 }
 
 .h1-title p{
-  color:red;
+  color:white;
 }
 
 .home-page {
