--- a/app/views/ghosts/show.html.erb
+++ b/app/views/ghosts/show.html.erb
@@ -39,8 +39,8 @@
             <br>
             <h2> Book <%= @ghost.name %> for a Haunting: </h2>
             <%= simple_form_for [@ghost, @haunting] do |g| %>
-              <%= g.input :start_date %>
-              <%= g.input :end_date %>
+              <%= g.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+              <%= g.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
               <%= g.input :location %>
               <%= g.submit class: 'btn btn-success' %>
             <% end %>
