--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -10,10 +10,13 @@
   grid-template-columns: 1fr;
 }
 
+.card a {
+  text-decoration: none;
+}
+
 .card-trip {
   overflow: hidden;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
   margin: 8px;
 }
 
@@ -36,6 +39,22 @@
 }
 
 
+.card-show h1 {
+  font-size: 64px;
+  opacity: .7;
+  margin: 0;
+  padding: 8px;
+  text-align: center;
+}
+
+.card-show h2 {
+  font-size: 32px;
+  opacity: .7;
+  margin: 0;
+  padding: 8px;
+  text-align: center;
+}
+
 .card-trip .card-trip-infos {
   padding: 16px;
   display: flex;
@@ -43,3 +62,20 @@
   align-items: flex-end;
   position: relative;
 }
+
+.card-trip-infos-show p {
+  font-size: 12px;
+  opacity: .7;
+  margin: 0;
+  font-size: x-large;
+  padding: 8px;
+  box-shadow: none;
+}
+
+.card-show{
+  background: white;
+  padding: 8px;
+  box-shadow: none;
+  margin-top: 16px;
+}
+
