--- a/app/views/ghosts/show.html.erb
+++ b/app/views/ghosts/show.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-  <div class="text-center"><h1> The Ghost you chose is: <%= @ghost.name %> </h1></div>
    <div class="row justify-content-center">
     <div class="col-12 col-lg-6">
-  <div class="card">
+  <div class="card-show">
+    <h1> <%= @ghost.name %> </h1>
     <div class="card-trip">
 
 
@@ -29,9 +29,8 @@
       <% end %>
 
 
-        <div class="card-trip-infos">
+        <div class="card-trip-infos-show">
           <div>
-            <h2><%= @ghost.name %></h2>
             <p>Era: <%= @ghost.era %></p>
             <p> Category: <%= @ghost.category %></p>
             <p> Description: <%= @ghost.description %></p>
