--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -17,7 +17,7 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 80px;
   font-weight: bold;
-  font-family: 'Odibee Sans', cursive;
+  font-family: 'Spectral', serif;
   display: grid;
   place-items: center;
   margin-top: 24px;
