--- a/app/assets/stylesheets/components/_features.scss
+++ b/app/assets/stylesheets/components/_features.scss
@@ -47,21 +47,22 @@ img{
 .card-text {
   text-align: center;
   font-weight: bold;
-  font-family: 'Odibee Sans', cursive;
+  font-family: 'Spectral', serif;;
   font-size: 25px;
-  color: red;
+  color: white;
 }
 
 .card-text:hover{
-  color: black;
+  color: red;
 }
 h2{
  margin-top: 20px;
  text-align: center;
- font-family: 'Odibee Sans', cursive;
- color: red;
+ font-family: 'Spectral', serif;;
+ color: black;
 }
 
 .home-page{
   background-color: #201F1F;
 }
+
