--- a/app/views/ghosts/show.html.erb
+++ b/app/views/ghosts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="text-center"><h1> The Ghost you chose is: <%= @ghost.name %> </h1></div>
+  <div class="text-center"><h1 class="g_show_h1"> The Ghost you chose is: <%= @ghost.name %> </h1></div>
    <div class="row justify-content-center">
     <div class="col-12 col-lg-6">
   <div class="card">
