--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,10 @@
 <footer>
-  <div class="footer">
-
   <div class="footer-links">
     <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-facebook"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
   </div>
   <div class="footer-copyright">
-    <strong>2021 scarebnb inc.</strong> <i class="fas fa-ghost white-ghost"></i>
+    2021 scarebnb inc. <i class="fas fa-ghost white-ghost"></i>
 </div>
 </footer>
