--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,17 +8,18 @@
   color: rgba(0,0,0,0.3);
   justify-content: center;
   background-color: #f7f7f7;
-  color: red;
-  border-top: solid 1px #ff5a62;
+  color: black;
+  border-top: solid 1px black;
+  margin-top: 20px;
 
 }
 .footer-links {
   display: flex;
   align-items: center;
-  color: #ff5a62;
+  color: black;
 }
 .footer-links a {
-  color: red;
+  color: black;
   // opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
@@ -30,7 +31,7 @@
   color: black;
 }
 .white-ghost {
-  color: red;
+  color: black;
   font-size: 25px;
   vertical-align: middle;
 }
@@ -38,6 +39,8 @@
 .footer-copyright{
   padding-bottom: 5px;
   flex-direction: horizontal;
+  font-family: 'Spectral', serif;
+  font-weight: bold;
 }
 
 
