--- a/app/views/ghosts/index.html.erb
+++ b/app/views/ghosts/index.html.erb
@@ -1,6 +1,6 @@
 
   <div class="container">
-    <div class="text-center"><h1> Have a look at the available ghosts: </h1> </div>
+    <div class="text-center"><h1 class="ghost_h1"> Have a look at the available ghosts: </h1> </div>
     <div class="cards">
     <% @ghosts.each do |ghost| %>
     <%= link_to ghost_path(ghost) do %>
