--- a/app/views/ghosts/show.html.erb
+++ b/app/views/ghosts/show.html.erb
@@ -41,7 +41,7 @@
             <%= simple_form_for [@ghost, @haunting] do |g| %>
               <%= g.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
               <%= g.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-              <%= g.input :location %>
+              <%= g.input :location, placeholder: 'Haunted Tower, Transylvania, GH0 8T8' %>
               <%= g.submit class: 'btn btn-success' %>
             <% end %>
           </div>
