--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,14 +1,16 @@
 
 .btn-nice{
-  background-color: #ff5a62;
+  background-color: #8D0801;
   color: white;
-  border: 2px solid #ff5a62;
+  border: 2px solid #8D0801;
   padding: 10px 16px;
   border-radius: 4px;
 }
 
 .btn-nice:hover{
-  color: #ff5a62;
-  background-color: white;
+  color: white;
+  border-color: white;
+  background-color: #593C8F;
   transition: 0.5s;
+
 }
