--- a/app/assets/stylesheets/components/_features.scss
+++ b/app/assets/stylesheets/components/_features.scss
@@ -22,6 +22,7 @@
   // margin-bottom: 30px;
   grid-gap: 16px;
   margin: 16px;
+
   // justify-content: between;
 }
 
@@ -30,6 +31,7 @@
   margin: 16px;
   border-radius: 10%;
   border-box: 3px 3px 3px 0;
+
 }
 
 .featured-ghosts{
@@ -41,6 +43,7 @@ img{
   width: 100%;
   border-box: 3px 3px 3px 0 black;
   border-radius: 10px;
+  box-shadow: 2px 2px 2px 0 black;
 
 }
 
