--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div>
-    <h2>Featured Ghosts</h2>
+    <h2 class="h2-home">Featured Ghosts</h2>
     <div style="display: flex; justify-content: center;">
       <div class="container-cards">
        <div class="card-home" style="width: 18rem;">
