--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,14 +2,17 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
-  border-radius: 10%;
-  // margin: px;
+   // margin: px;
 }
 
 .card {
   display: grid;
   grid-template-columns: 1fr;
-  border-radius: 10px;
+
+.card img {
+  border-radius: none;
+}
+
 }
 
 .card-trip {
@@ -17,6 +20,7 @@
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   margin: 8px;
+  border-radius: 5px;
 }
 
 .card-trip > img {
@@ -45,4 +49,5 @@
   justify-content: space-between;
   align-items: flex-end;
   position: relative;
+  // height: 100px;
 }
