Show page beautification complete

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -43,6 +43,7 @@
 
 
 .card-show h1 {
+  color: black;
   font-size: 64px;
   opacity: .7;
   margin: 0;
@@ -81,4 +82,3 @@
   box-shadow: none;
   margin-top: 16px;
 }
-
