--- a/app/assets/stylesheets/components/_features.scss
+++ b/app/assets/stylesheets/components/_features.scss
@@ -42,7 +42,7 @@ img{
   object-fit:contain;
   width: 100%;
   border-box: 3px 3px 3px 0 black;
-  border-radius: 10px;
+  // border-radius: 10px;
   box-shadow: 2px 2px 2px 0 black;
 
 }
@@ -56,7 +56,7 @@ img{
 }
 
 .card-text:hover{
-  color: red;
+  color: grey;
 }
 h2{
  margin-top: 20px;
