change in styling

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -8,7 +8,7 @@
   flex-grow: 1;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 40px;
+  grid-gap: 30px;
 }
 
 .card-body {
@@ -18,4 +18,14 @@
   height: 115px;
   transform: translateY(-50%);
   transition: 0.2s;
+}
+
+.titleh1 {
+  text-align: center;
+  width: 100%;
+  margin: 24px;
+}
+
+#map {
+  position: sticky;
 }
