--- a/app/views/hauntings/index.html.erb
+++ b/app/views/hauntings/index.html.erb
@@ -1,17 +1,19 @@
-<h1> Here are all your hauntings: </h1>
+<h1 class="titleh1"> Here are all your hauntings: </h1>
 <div class="grid-content">
   <div class="hauntings-grid">
     <% @hauntings.each do |haunting| %>
-      <div class="card card-trip">
+      <div class="card-trip">
         <% if haunting.ghost.photos.attached? %>
           <%= cl_image_tag(haunting.ghost.photos.first.key) %>
         <% else %>
           <%= cl_image_tag("https://res.cloudinary.com/dbe4hul9k/image/upload/w_1000,ar_16:9,c_fill,g_auto,e_sharpen/v1622714025/ghostbusters-logo_cqzclk.jpg") %>
         <% end %>
       <div class="card-trip-infos">
+        <div>
         <h2>You’re new haunting details: </h2>
         <p>Ghost: <%= haunting.ghost.name %></p>
         <p>Owner: <%= haunting.ghost.user.email %> </p>
+        </div>
         <div class="text-center mg-16px"> <%= link_to 'View this haunting', haunting_path(haunting), class: 'btn btn-nice'%> </div>
       </div>
       </div>
