--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -19,7 +19,7 @@
   font-weight: bold;
   font-family: 'Spectral', serif;
   display: grid;
-  text-align: center;
+  // text-align: center;
   margin-top: 55px;
 }
 
@@ -27,7 +27,7 @@
   position:absolute;
   text-align: center;
   // justify-content: left;
-  display: grid;
+  // display: grid;
   // place-items: center;
   margin: 0 auto;
   margin-top: 24px;
