--- a/app/assets/stylesheets/components/_features.scss
+++ b/app/assets/stylesheets/components/_features.scss
@@ -43,8 +43,7 @@ img{
   width: 100%;
   border-box: 3px 3px 3px 0 black;
   // border-radius: 10px;
-  box-shadow: 2px 2px 2px 0 black;
-
+  // box-shadow: 2px 2px 2px 0 black;
 }
 
 .card-text {
