--- a/app/views/ghosts/show.html.erb
+++ b/app/views/ghosts/show.html.erb
@@ -39,7 +39,7 @@
               <%= g.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
               <%= g.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
               <%= g.input :location, placeholder: 'Haunted Tower, Transylvania, GH0 8T8' %>
-              <%= g.submit class: 'btn btn-success' %>
+              <%= g.submit class: 'btn btn-nice' %>
             <% end %>
           </div>
       </div>
