--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="home-video-wrapper">
-    <%= video_tag "/assets/forestroad.mp4", autoplay: :autoplay, loop: :loop, muted: :muted, class: "home_video" %>
+    <%= video_tag "forestroad.mp4", autoplay: :autoplay, loop: :loop, muted: :muted, class: "home_video" %>
   </div>
 
   <div>
