--- a/app/views/ghosts/index.html.erb
+++ b/app/views/ghosts/index.html.erb
@@ -4,7 +4,7 @@
     <div class="cards">
     <% @ghosts.each do |ghost| %>
     <%= link_to ghost_path(ghost) do %>
-      <div class="card-trip" >
+      <div class="card-trip ghosts-index-card" >
         <% if ghost.photos.attached? %>
           <%= cl_image_tag(ghost.photos.first.key) %>
         <% else %>
