--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,19 +17,19 @@
        <div class="card-home" style="width: 18rem;">
         <img src="https://images.unsplash.com/photo-1601496319406-21021f4f60bd?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Michael Jackson</p>
+          <p class="card-texting">Michael Jackson</p>
         </div>
       </div>
       <div class="card-home" style="width: 18rem;">
         <img src="https://images.unsplash.com/photo-1587356315079-3178211b3166?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Elvis Presley</p>
+          <p class="card-texting">Elvis Presley</p>
         </div>
       </div>
       <div class="card-home" style="width: 18rem;">
         <img src="https://images.unsplash.com/photo-1604186838347-9faaf0b83be8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="...">
         <div class="card-body">
-          <p class="card-text">The Headless Horseman</p>
+          <p class="card-texting">The Headless Horseman</p>
         </div>
       </div>
     </div>
