pushing buttons on hauntings

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -4,7 +4,7 @@
 }
 
 .hauntings-grid {
-  min-width: 950px;
+  width: 950px;
   flex-grow: 1;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -28,4 +28,5 @@
 
 #map {
   position: sticky;
+  top: 0;
 }
