--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -14,3 +14,13 @@
   transition: 0.5s;
 
 }
+
+
+.btn-haunting{
+  background-color: #8D0801;
+  color: white;
+  border: 2px solid #8D0801;
+  padding: 8px 12px;
+  border-radius: 4px;
+}
+
