buttons and romantic

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -42,3 +42,12 @@
   border: none;
 }
 
+// .btn-nice-nice{
+//   background-color: white;
+//   color: #8D0801;
+//   border: 2px solid #8D0801;
+//   padding: 10px 16px;
+//   border-radius: 4px;
+//   border: 2px solid #8D0801;
+
+// }
