--- a/app/views/hauntings/show.html.erb
+++ b/app/views/hauntings/show.html.erb
@@ -29,9 +29,9 @@
  </div>
  <br>
  <div class="text-center mg-16px">
-  <%= link_to 'Go back', ghost_path(@haunting.ghost), class: 'btn btn-primary' %>
- <%= link_to 'Look at more ghosts', ghosts_path, class: 'btn btn-primary' %>
- <%= link_to "View all hauntings", "/hauntings", class: "btn btn-primary" %>
+  <%= link_to 'Go back', ghost_path(@haunting.ghost), class: 'btn btn-nice' %>
+ <%= link_to 'Look at more ghosts', ghosts_path, class: 'btn btn-nice' %>
+ <%= link_to "View all hauntings", "/hauntings", class: "btn btn-nice" %>
 </div>
 <!-- <p>Start Date: <%= @haunting.start_date %></p>
 <p>End Date: <%= @haunting.end_date %></p>
